# lunarstack

./: .env.example  .eslintignore  .eslintrc.js  .gitignore  .prettierignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  commitlint.config.js  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.cargo/: config.toml
.github/workflows/: codeql.yaml  rust.yaml
.husky/: commit-msg  pre-commit
apps/: README.md
apps/tauri-web/: package.json  tsconfig.json
apps/tauri-web/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/tauri-web/src-tauri/src/: lib.rs
apps/web/: package.json
apps/web/src/app/: layout.tsx
assets/: README.md
common/: README.md
crates/: Cargo.toml  README.md
crates/prisma/: Cargo.toml  schema.prisma
crates/prisma-client/: Cargo.toml
crates/prisma-client/prisma/: schema.prisma
crates/prisma-client/src/: lib.rs  prisma.rs
crates/prisma/prisma/: schema.prisma
crates/prisma/src/: .gitignore  lib.rs
docs/: README.md
services/: Cargo.toml  README.md
services/api/: .gitignore  Cargo.toml  package.json
services/api/src/: main.rs
services/axum-api/: Cargo.toml
services/axum-api/src/: main.rs
services/nest-api/: package.json
services/nest-api/prisma/: schema.prisma
services/nest-api/src/: app.module.ts
services/nest-api/test/: app.e2e-spec.ts
services/warp-api/: .env  .gitignore  Cargo.toml  README.md
services/warp-api/src/: main.rs
tools/: README.md
tools/prisma-cli/: Cargo.toml
