[package]
name = "warp-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = "1.0.192"

prisma = { path = "../../crates/prisma" }
